Show the setup Play button on the right.

--- a/style/screen-setup.scss
+++ b/style/screen-setup.scss
@@ -89,7 +89,7 @@
   grid-template-areas:
     "atlas colors"
     "segments rules"
-    "buttons buttons";
+    "other buttons";
   grid-template-columns: min-content auto;
   grid-template-rows: min-content min-content min-content;
   justify-content: center;
