--- a/style/screen-setup.scss
+++ b/style/screen-setup.scss
@@ -11,7 +11,7 @@
   box-shadow: inset 0 0 40px rgb(0 0 0 / 20%);
   display: grid;
   grid-template-areas: "example settings";
-  grid-template-columns: 1fr min-content;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
 }
 
