--- a/style/screen-game.scss
+++ b/style/screen-game.scss
@@ -196,8 +196,13 @@
   }
 }
 
-.rotatable.animated {
-  transition: rotate 300ms ease;
+.rotatable {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  &.animated {
+    transition: rotate 300ms ease;
+  }
 }
 .rotatable-dragging.animated {
   transition: rotate 200ms;
