--- a/style/components.scss
+++ b/style/components.scss
@@ -61,6 +61,10 @@
   fill: rgba(0, 0, 0, 35%);
   background: rgba(0, 0, 0, 8%);
 
+  &.game-button-pressed {
+    background: rgba(0, 0, 0, 15%);
+  }
+
   svg {
     width: 100%;
     aspect-ratio: 1 / 1;
