--- a/style/screen-menu.scss
+++ b/style/screen-menu.scss
@@ -31,6 +31,7 @@
       aspect-ratio: 1 / 1;
       min-width: 0;
       min-height: 0;
+      &.game-button-pressed,
       &:hover {
         transform: scale(1.1);
       }
