--- a/style/components.scss
+++ b/style/components.scss
@@ -84,8 +84,8 @@
 
   .icon {
     margin-left: 0.7vw;
-    width: colors.$button-scale;
-    height: colors.$button-scale;
+    width: calc(0.85 * colors.$button-scale);
+    height: calc(0.85 * colors.$button-scale);
     fill: rgba(0, 0, 0, 35%);
 
     svg {
@@ -105,8 +105,8 @@
 
   .toggle-ball {
     border-radius: 100%;
-    width: colors.$button-scale;
-    height: colors.$button-scale;
+    width: calc(0.85 * colors.$button-scale);
+    height: calc(0.85 * colors.$button-scale);
     background: rgba(0, 0, 0, 25%);
   }
 
