--- a/style/screen-game.scss
+++ b/style/screen-game.scss
@@ -194,11 +194,16 @@
 
   max-height: 18vh;
 
+  cursor: grab;
+
   transition-property: scale;
   transition-duration: 100ms;
   svg {
     width: 100%;
     aspect-ratio: 1/1;
+  }
+  &.tile-dragging {
+    cursor: grabbing;
   }
   &.tile-dragging,
   &.tile-drag-return {
