--- a/style/screen-game.scss
+++ b/style/screen-game.scss
@@ -40,12 +40,12 @@
 
   .fill {
     grid-area: fill;
-    background: #bbb;
+    background: colors.$panel-bg;
   }
 
   .tile-stack {
     grid-area: tile-stack;
-    background: #bbb;
+    background: colors.$panel-bg;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -53,7 +53,7 @@
 
   .tile-counter-and-score {
     grid-area: counters;
-    background: #bbb;
+    background: colors.$panel-bg;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -74,7 +74,7 @@
   margin: -1vw;
 
   &.expanded {
-    background: #f6f6f6;
+    background: colors.$dropout-bg;
 
     .game-button.dropout svg {
       rotate: 90deg;
@@ -123,15 +123,13 @@
   .items,
   .game-button + .game-toggle,
   .game-button + .game-toggle + .game-toggle {
-    border-top: 1px solid #ddd;
+    border-top: 1px solid colors.$panel-bg;
     padding-top: $margin;
   }
 
   .game-button.backtomenu {
-    background: #e1f0c1;
-    background: #bdcfe6;
-    background: #1d4a85;
-    fill: #fff;
+    background: colors.$home-button-bg;
+    fill: colors.$home-button-fg;
   }
 
   /*
@@ -183,7 +181,7 @@
     z-index: 1000;
   }
   .tile-outline {
-    stroke: #ddd;
+    stroke: colors.$main-bg;
   }
 }
 
@@ -257,9 +255,9 @@
   box-sizing: border-box;
   padding: 4% 0 7% 0;
   border-radius: 2vw;
-  border: 3px solid #63851d;
-  background: #e1f0c1;
-  color: #63851d;
+  border: 3px solid colors.$score-display-fg;
+  background: colors.$score-display-bg;
+  color: colors.$score-display-fg;
   opacity: 0.5;
   font-size: min(4vw, 5vh);
   text-align: center;
