--- a/style/main.scss
+++ b/style/main.scss
@@ -3,5 +3,6 @@
 @use "./grid-display.scss";
 @use "./screen-menu.scss";
 @use "./screen-game.scss";
+@use "./screen-paint.scss";
 @use "./score-overlay.scss";
 @use "./screen-setup.scss";
