--- a/style/screen-menu.scss
+++ b/style/screen-menu.scss
@@ -14,30 +14,36 @@ $logo-row-height: min(20vw, 20vh);
     flex-grow: 1;
     align-items: center;
     justify-content: center;
+    justify-items: center;
+    align-content: center;
     width: 100%;
     height: 100%;
     max-width: 100vw;
     max-height: 100vh;
+    padding-bottom: 30px;
+    box-sizing: border-box;
     display: grid;
     grid-template:
       "spacer" 1fr
       "example-grid" max-content
-      "logo" 1fr;
+      "logo" 1fr / 1fr;
   }
 
   .logo {
     grid-area: logo;
     display: flex;
-    align-items: center;
+    align-items: start;
+    align-self: start;
     justify-content: center;
+    padding-top: 5vh;
     width: 100%;
     min-height: $logo-row-height;
     max-height: $logo-row-height;
 
-    @media screen and (max-aspect-ratio: 0.8) {
-      align-items: start;
-      align-self: start;
-      padding-top: 5vh;
+    @media screen and (min-aspect-ratio: 0.8) and (max-aspect-ratio: 1.5) {
+      align-items: center;
+      align-self: center;
+      padding-top: 0;
     }
 
     svg {
@@ -61,8 +67,7 @@ $logo-row-height: min(20vw, 20vh);
   .game-list {
     grid-area: example-grid;
     display: grid;
-    width: 100%;
-    max-height: min(100vh, 100vw);
+    max-height: min(100vh, 100vw, 60vh);
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: min(4vh, 4vw);
     row-gap: min(4vw, 4vh);
@@ -78,18 +83,21 @@ $logo-row-height: min(20vw, 20vh);
       aspect-ratio: 1 / 1;
       min-width: 0;
       min-height: 0;
+      max-width: 60vh;
+      max-height: 60vh;
       &.game-button-pressed,
       &:hover {
         transform: scale(1.1);
       }
     }
+  }
 
-    @media screen and (max-aspect-ratio: 4/3) {
-      & {
-        max-width: min(100vh, 100vw);
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-      }
+  @media screen and (max-aspect-ratio: 5/3) {
+    .game-list {
+      max-height: 90vh;
+      max-width: min(100vh, 100vw, 90vh);
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
     }
   }
 }
